--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -16,6 +16,40 @@
 <body>
     <header>
         <div class="header">
+            <div class="modal hidden">
+                <div class="modal-content">
+                    <button class="modal-close">&times;</button>
+                    <h2>Вход</h2>
+                    <form id="login-form">
+                        <label for="username">Логин:</label>
+                        <input type="text" id="username" placeholder="Введите логин" required>
+                        <label for="password">Пароль:</label>
+                        <input type="password" id="password" placeholder="Введите пароль" required>
+                        <button type="submit">Войти</button>
+                    </form>
+                    <p>Еще не зарегистрированы?
+                        <a href="#" id="register-link">Зарегистрироваться</a>
+                    </p>
+                </div>
+                <div class="modal-overlay"></div>
+            </div>
+
+            <div class="modal modal-register hidden">
+                <div class="modal-content">
+                    <button class="modal-close">&times;</button>
+                    <h2>Регистрация</h2>
+                    <form id="register-form">
+                        <label for="reg-username">Логин:</label>
+                        <input type="text" id="reg-username" placeholder="Введите логин" required>
+                        <label for="reg-password">Введите пароль:</label>
+                        <input type="password" id="reg-password" placeholder="Введите пароль" required>
+                        <label for="reg-password-apply">Подтвердите пароль:</label>
+                        <input type="password" id="reg-password-apply" placeholder="Введите пароль" required>
+                        <button type="submit">Зарегистрироваться</button>
+                    </form>
+                </div>
+                <div class="modal-overlay"></div>
+            </div>
             <div data-aos="fade-down" data-aos-delay="50" class="container">
                 <div class="theme-switch-wrapper">
                     <span id="toggle-icon">
@@ -42,7 +76,7 @@
                         <a href="mailto:quickrepairgr@gmail.com">quickrepairgr@gmail.com</a>
                     </div>
                 </div>
-                <button class="button">Заказать звонок</button>
+                <button class="button"><a href="contacts.html#request">Оставить заявку</a></button>
             </div>
         </div>
         <div class="subheader">
@@ -64,7 +98,6 @@
                     </ul>
                 </nav>
                 <div class="subheader__login-wrapper">
-                    <button><img class="reg-icon" src="icons/register-light.svg" alt="регистрация"></button>
                     <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
                 </div>
                 <button class="hamburger">
@@ -75,12 +108,11 @@
             </div>
             <div class="mobile-menu">
                 <ul class="mobile-menu__list">
-                    <li><a class="mobile-menu__link mobile-menu__link-active" href="./index.html">О нас</a></li>
-                    <li><a class="mobile-menu__link" href="./catalog.html">Услуги</a></li>
+                    <li><a class="mobile-menu__link " href="./index.html">О нас</a></li>
+                    <li><a class="mobile-menu__link mobile-menu__link-active" href="./catalog.html">Услуги</a></li>
                     <li><a class="mobile-menu__link" href="./contacts.html">Контакты</a></li>
                 </ul>
                 <div class="mobile-menu__login-wrapper">
-                    <button><img class="reg-icon" src="icons/register-light.svg" alt="регистрация"></button>
                     <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
                 </div>
             </div>
@@ -100,8 +132,8 @@
                     <p data-aos="fade-up" data-aos-delay="50" class="hero__text_descr">Мы всегда на связи, чтобы
                         ответить на ваши вопросы и помочь с ремонтом техники. Позвоните, напишите или посетите наш офис
                         — мы рядом, когда это нужно!</p>
-                    <button data-aos="fade-up" data-aos-delay="100"
-                        class="button button-big button-center-phone">Оставить заявку</button>
+                    <button data-aos="fade-up" data-aos-delay="100" class="button button-big button-center-phone"><a
+                            href="#request">Оставить заявку</a></button>
                 </div>
             </div>
         </section>
@@ -109,11 +141,100 @@
         <section class="contacts">
             <h2 data-aos="zoom-in" class="title">Контакты</h2>
             <h3 data-aos="zoom-in" data-aos-delay="100" class="subtitle subtitle-black">Где мы <span
-                class="text-extrabold">находимся</span> </h3>
+                    class="text-extrabold">находимся</span> </h3>
             <div class="container">
-                <iframe
+                <div data-aos="flip-left" data-aos-delay="50" class="contacts__dialog">
+                    <div class="contacts__dialog_item">
+                        <img class="icon-phone" src="icons/phone.svg" alt="Иконка телефона">
+                        <a href="tel:+79815061868">+7 (981) 506-18-68</a>
+                    </div>
+                    <div class="contacts__dialog_item">
+                        <img class="icon-geo" src="icons/geo-location.svg" alt="Иконка геолокации">
+                        <a
+                            href="https://yandex.ru/maps/20121/gryazovets/house/ulitsa_lenina_53_66/YEkYdAJjTUcAQFtifXR2eH5nbQ==/?ll=40.253422%2C58.879273&z=20.08">Адрес
+                            : Гязовец, ул. Ленина, дом 53</a>
+                    </div>
+                    <div class="contacts__dialog_item">
+                        <img class="icon-email" src="icons/email.svg" alt="Иконка почты">
+                        <a href="mailto:quickrepairgr@gmail.com">quickrepairgr@gmail.com</a>
+                    </div>
+                    <div class="contacts__dialog_item">
+                        <img class="stopwatch-icon" src="icons/stopwatch-light.svg" alt="Иконка почты">
+                        <p>График работы: 9:00 - 18:00 Пн-Пт</p>
+                    </div>
+                </div>
+                <iframe data-aos="flip-right" data-aos-delay="50"
                     src="https://yandex.ru/map-widget/v1/?um=constructor%3A40009503927fbbbe53b6288e6d4a362716174108c1ad5d24668e8b05d865e9b1&amp;source=constructor"
                     width="650" height="550" frameborder="0"></iframe>
+            </div>
+        </section>
+
+        <section id="request" class="request">
+            <h2 data-aos="zoom-in" class="title title-light">Запись</h2>
+            <h3 data-aos="zoom-in" data-aos-delay="100" class="subtitle">отправьте быструю <span
+                    class="text-extrabold">заявку</span> </h3>
+            <div class="container">
+                <form data-aos="zoom-in-up" class="request__form" action="/submit" method="post">
+                    <!-- Имя -->
+                    <div class="request__form_group">
+                        <label for="name">Ваше имя:</label>
+                        <input type="text" id="name" name="name" placeholder="Введите ваше имя" required>
+                    </div>
+
+                    <!-- Телефон -->
+                    <div class="request__form_group">
+                        <label for="phone">Телефон:</label>
+                        <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон"
+                            pattern="[0-9]{10,15}" required>
+                    </div>
+
+                    <!-- Электронная почта -->
+                    <div class="request__form_group">
+                        <label for="email">Электронная почта:</label>
+                        <input type="email" id="email" name="email" placeholder="Введите вашу электронную почту"
+                            required>
+                    </div>
+
+                    <!-- Тип услуги -->
+                    <div class="request__form_group request__form_group-together">
+                        <div>
+                            <label for="service">Тип услуги:</label>
+                            <select id="service" name="service" required>
+                                <option value="" disabled selected>Выберите услугу</option>
+                                <option value="consultation">Сетевая настройка</option>
+                                <option value="development">Ремонт периферии</option>
+                                <option value="support">Корпоративные услуги</option>
+                                <option value="support">Ремонт смартфона</option>
+                                <option value="support">Восстановление данных</option>
+                                <option value="support">Ремонт компьютера</option>
+                                <option value="support">Ремонт ноутбуков</option>
+                                <option value="support">Установка ПО</option>
+                                <option value="support">Поддержка пользователя</option>
+
+                            </select>
+                        </div>
+                        <div>
+                            <label for="date">Дата:</label>
+                            <input type="date" id="date" name="date" min="" required>
+                        </div>
+                    </div>
+
+                    <!-- Комментарий -->
+                    <div class="request__form_group">
+                        <label for="comment">Коментарий (необязательно):</label>
+                        <textarea id="comment" name="comment" placeholder="Введите ваш комментарий......."></textarea>
+                    </div>
+
+                    <!-- Согласие -->
+                    <div class="request__form_group request__form_group-checkbox">
+                        <input type="checkbox" id="consent" name="consent" required>
+                        <label for="consent">Я даю согласие на обработку моих персональных данных в соответствии с <a
+                                href="./privacy.html">Политикой конфиденциальности</a></label>
+                    </div>
+
+                    <!-- Кнопка отправки -->
+                    <button type="submit" class="button button-big">Отправить заявку</button>
+                </form>
             </div>
         </section>
 
@@ -132,9 +253,9 @@
                 <nav class="footer__nav">
                     <h5>Навигация</h5>
                     <ul class="footer__list">
-                        <li><a class="footer__list_item" href="#">О нас</a></li>
-                        <li><a class="footer__list_item" href="#">Услуги</a></li>
-                        <li><a class="footer__list_item" href="#">Контакты</a></li>
+                        <li><a class="footer__list_item" href="index.html">О нас</a></li>
+                        <li><a class="footer__list_item" href="catalog.html">Услуги</a></li>
+                        <li><a class="footer__list_item" href="contacts.html">Контакты</a></li>
                     </ul>
                 </nav>
                 <div class="footer__contacts">
@@ -159,22 +280,24 @@
                 <div class="footer__news">
                     <h5>Новости</h5>
                     <p>Подпишитесь на наши новости, чтобы не пропустить последние обновления!</p>
-                    <form class="footer__form" action="/submit-email" method="POST">
-                        <label for="email" hidden>Ваш Email:</label>
-                        <input type="email" id="email" name="email" required placeholder="Введите ваш email">
-                        <button class="button" type="submit">Подтвердить</button>
+                    <form class="footer__form">
+                        <label for="email-footer"></label>
+                        <input type="email" id="email-footer" name="email" required placeholder="Введите ваш email">
+                        <p class="footer__form_thx">Спасибо за подписку 😊</p>
+                        <button id="email-footer-btn" class="button" type="submit">Подтвердить</button>
                     </form>
                 </div>
             </div>
             <hr>
             <div class="footer__copyright">
                 Copyright 2024, ВСЕ ПРАВА ЗАЩИЩЕНЫ
+                <a class="arrow-up" href="#"><img src="./icons/arrow-up.svg" alt="стрелка вверх"></a>
+
             </div>
         </div>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- <script src="../node_modules/aos/dist/aos.js"></script> -->
     <script>
         AOS.init();
     </script>
