--- a/src/contacts.html
+++ b/src/contacts.html
@@ -109,8 +109,8 @@
             <div class="mobile-menu">
                 <ul class="mobile-menu__list">
                     <li><a class="mobile-menu__link " href="./index.html">О нас</a></li>
-                    <li><a class="mobile-menu__link mobile-menu__link-active" href="./catalog.html">Услуги</a></li>
-                    <li><a class="mobile-menu__link" href="./contacts.html">Контакты</a></li>
+                    <li><a class="mobile-menu__link " href="./catalog.html">Услуги</a></li>
+                    <li><a class="mobile-menu__link mobile-menu__link-active" href="./contacts.html">Контакты</a></li>
                 </ul>
                 <div class="mobile-menu__login-wrapper">
                     <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
@@ -291,7 +291,7 @@
             <hr>
             <div class="footer__copyright">
                 Copyright 2024, ВСЕ ПРАВА ЗАЩИЩЕНЫ
-                <a class="arrow-up" href="#"><img src="./icons/arrow-up.svg" alt="стрелка вверх"></a>
+                <a class="arrow-up" href="#"><img id="arrow-up" src="./icons/arrow-up.svg" alt="стрелка вверх"></a>
 
             </div>
         </div>
