add profile page

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -160,6 +160,8 @@
                 <div id="modal-1" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                    <img src="./img/catalog-photos/network.png" alt="фото настройки сети" >
+
                         <h2>Сетевая настройка</h2>
                         <p>Настройка сети — это ключевой этап для обеспечения стабильной и безопасной работы ваших
                             устройств в офисе или дома. Мы предоставляем профессиональные услуги по созданию и
@@ -232,6 +234,8 @@
                 <div id="modal-2" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                    <img src="./img/catalog-photos/printer.png" alt="принтер" >
+
                         <h2>Ремонт периферии</h2>
                         <p>Предоставляем профессиональный ремонт и обслуживание периферийных устройств: принтеров,
                             сканеров, мониторов, клавиатур и мышей. Быстро устраняем любые неисправности и продлеваем
@@ -301,6 +305,8 @@
                 <div id="modal-3" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                        <img src="./img/catalog-photos/corporation.png" alt="корпоративные услуги">
+
                         <h2>Корпоративные услуги</h2>
                         <p>Оказываем полный спектр IT-услуг для бизнеса: от настройки сетей и оборудования до
                             обслуживания офисной техники. Помогаем оптимизировать работу компании и обеспечиваем
@@ -370,6 +376,8 @@
                 <div id="modal-4" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                        <img src="./img/catalog-photos/mobile.png" alt="разобранный смартфон">
+
                         <h2>Ремонт телефонов</h2>
                         <p>Оказываем профессиональный ремонт мобильных телефонов: от замены экрана до устранения сложных
                             программных неисправностей. Быстро и качественно восстанавливаем работоспособность вашего
@@ -438,6 +446,8 @@
                 <div id="modal-5" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                        <img src="./img/catalog-photos/harddisk.png" alt="жесткий диск">
+
                         <h2>Восстановление данных</h2>
                         <p>Профессионально восстанавливаем данные с любых носителей: жёстких дисков, флешек, карт памяти
                             и мобильных устройств. Успешно возвращаем утраченные файлы даже в самых сложных случаях!
@@ -507,6 +517,8 @@
                 <div id="modal-6" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                        <img src="./img/catalog-photos/pc-repair.png" alt="компьютер">
+
                         <h2>Ремонт компьютеров</h2>
                         <p>Профессионально выполняем ремонт стационарных компьютеров и ноутбуков любой сложности. Быстро
                             устраняем неисправности и восстанавливаем стабильную работу вашего устройства! <br>
@@ -574,6 +586,8 @@
                 <div id="modal-7" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                        <img src="./img/catalog-photos/laptop.png" alt="разобранный ноутбук">
+
                         <h2>Ремонт ноутбуков</h2>
                         <p>Качественно выполняем ремонт ноутбуков любой сложности: от замены экранов до устранения
                             проблем с материнской платой. Восстанавливаем функциональность и продлеваем срок службы
@@ -642,6 +656,7 @@
                 <div id="modal-8" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                        <img src="./img/catalog-photos/install.png" alt="установка программ">
                         <h2>Установка программного обеспечения</h2>
                         <p>Предоставляем услуги по установке и настройке программного обеспечения для любых устройств.
                             Обеспечиваем корректную работу всех приложений и систем для вашего удобства! <br>
@@ -710,6 +725,7 @@
                 <div id="modal-9" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
+                        <img src="./img/catalog-photos/help-user.png" alt="собачка за планшетом">
                         <h2>Поддержка пользователя</h2>
                         <p>Оказываем профессиональную техническую поддержку для пользователей: от решения проблем с
                             программным обеспечением до помощи в настройке оборудования. Обеспечиваем стабильную работу
@@ -855,7 +871,8 @@
             <hr>
             <div class="footer__copyright">
                 Copyright 2024, ВСЕ ПРАВА ЗАЩИЩЕНЫ
-                <a class="arrow-up" href="#"><img id="arrow-up" src="./icons/arrow-up.svg" alt="стрелка вверх"></a>
+                <a class="arrow-up" href="#"><img id="arrow-up" src="./icons/arrow-up-light.svg"
+                        alt="стрелка вверх"></a>
 
             </div>
         </div>
