--- a/src/contacts.html
+++ b/src/contacts.html
@@ -291,7 +291,7 @@
             <hr>
             <div class="footer__copyright">
                 Copyright 2024, ВСЕ ПРАВА ЗАЩИЩЕНЫ
-                <a class="arrow-up" href="#"><img id="arrow-up" src="./icons/arrow-up.svg" alt="стрелка вверх"></a>
+                <a class="arrow-up" href="#"><img id="arrow-up" src="./icons/arrow-up-light.svg" alt="стрелка вверх"></a>
 
             </div>
         </div>
