--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
                         ноутбуков и компьютерной техники с более
                         чем 10-летним опытом.</p>
                     <button data-aos="fade-up" data-aos-delay="100" class="button button-big button-center-phone"><a
-                            href="catalog.html">Посмотреть услуги</a></button>
+                            href="catalog.html#catalog">Посмотреть услуги</a></button>
                 </div>
             </div>
         </section>
